--- a/style.css
+++ b/style.css
@@ -6,10 +6,13 @@ html{
     height: 400px;
     width: 550px;
     background-color: #9DD2EA;
-    margin: 100px auto;
+    margin: 100px auto; 
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 4px 0px 0px #009de4;
+    -moz-box-shadow: 0px 4px 0px 0px #009de4;
+    -webkit-box-shadow: 0px 4px 0px 0px #009de4;
+
     position: relative;
 }
 #score{
@@ -34,5 +37,91 @@ html{
     background-color: red;
     color: white;
     padding: 10px;
+    display: none;
+}
+#question{
+    width: 450px;
+    height: 150px;
+    margin: 50px auto 10px auto;
+    background-color: #9DA0EA;
+    box-shadow: 0px 4px #535aa8;
+    font-size: 100px;
+    text-align: center;
+    font-family: cursive sans-serif;
+    color: black;
+}
+#instruction{
+    width: 450px;
+    height: 50px;
+    background-color: #B481D9;
+    margin: 10px auto;
+    text-align: center;
+    line-height: 45px;
+    box-shadow: 0px 4px #8153a8;
+
+}
+#choices{
+    width: 450px;
+    height: 100px;
+    margin: 5px auto;
+
+}
+.box{
+    width: 85px;
+    height: 85px;
+    background-color: white;
+    float: left;
+    margin-right:36px ;
+    border-radius: 3px;
+    cursor: pointer;
+    box-shadow: 0 4px rgba(0,0,0,0.2);
+    text-align: center;
+    line-height: 80px;
+    position: relative;
+    transition: all 0.2s;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    -ms-transition: all 0.2s;
+
+
+}
+.box:hover , #startreset:hover{
+    background-color: #9C89F6;
+    color: white;
+    box-shadow: 0px 4px #6b54d3;
+}
+.box:active , #startreset:active{
+    box-shadow: 0px 0px #6b54d3;
+    top:4px
+}
+#box4{
+    margin-right: 0;
+}
+#startreset{
+    width: 130px;
+    padding: 5px;
+    background-color:rgba(255, 255, 255, 0.5);
+    margin: 0px 30px;
+    border-radius: 3px;
+    cursor: pointer;
+    box-shadow: 0 4px rgba(0,0,0,0.2);
+    text-align: center;
+    position: relative;
+    transition: all 0.2s;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    -ms-transition: all 0.2s;
+}
+#timeremainig{
+    width: 230px;
+    padding: 5px;
+    position: absolute;
+    top: 395px;
+    left: 330px;
+    background-color: rgba(194, 241, 63, 0.7);
+    border-radius: 3px;
+    box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
     display: none;
 }
