--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ html{
     -o-transition: all 0.2s;
     -ms-transition: all 0.2s;
 }
-#timeremainig{
+#timeremaining{
     width: 230px;
     padding: 5px;
     position: absolute;
@@ -123,5 +123,22 @@ html{
     background-color: rgba(194, 241, 63, 0.7);
     border-radius: 3px;
     box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
     display: none;
+}
+#gameOver{
+    height: 230px;
+    width: 500px;
+    background: linear-gradient(#F3CA68,#F3706C);
+    color: white;
+    font-size: 2em;
+    text-align: center;
+    text-transform: uppercase;
+    position: absolute;
+    top: 100px;
+    left: 45px;
+    z-index: 2;
+    display: none;
+
 }
